# coderecon

./: .cplignore  .gitattributes  .gitignore  .reconignore  404.html  AGENTS.md  Makefile  README.md  codeplane.code-workspace  coderecon.code-workspace  index.html  measure_recall.py  measure_recall_v1.py  measure_scaffold_ablation.py  measure_tantivy.py  mkdocs.yml  pyproject.toml  signal_experiment.py  sitemap.xml
model-packages/coderecon-models-ce/: pyproject.toml
model-packages/coderecon-models-ce-tiny/: pyproject.toml
model-packages/coderecon-models-ce-tiny/coderecon_models_ce_tiny/: __init__.py  models
model-packages/coderecon-models-ce/coderecon_models_ce/: __init__.py  models
model-packages/coderecon-models-splade/: pyproject.toml
model-packages/coderecon-models-splade/coderecon_models_splade/: __init__.py
recon-lab/: .env.example  README.md  _backfill_splade.py  _mem_profile.py  adhoc_signal_experiment.py  adhoc_signal_experiment_v2.py  clone_repos.sh  dvc.yaml  justfile  lab.toml  pipeline-design.md  pyproject.toml  recon-lab.code-workspace  setup_workspace.sh  signal_analysis.py  vibe_check.py  vibe_check_filtered.py
recon-lab/aml/: conda-train.yml  pipeline.py  train-job.yml
recon-lab/aml/components/: clone.yml  collect.yml  eval.yml  index-gpu.yml  index.yml  merge.yml  swebench_import.yml  swebench_resolve.yml  train.yml
recon-lab/aml/environments/: conda-index-gpu.yml  conda-pipeline.yml
recon-lab/experiments/: signal_fixes_v1.md  tantivy_splade_bench.py
recon-lab/infra/: body_injection_experiment.py  cross_encoder_experiment.py  full_comparison.py  gt_orchestrator.py  index_all.sh  index_flagged.txt  merge_ground_truth.py  parse_traces.py  proof_analysis.py  reindex_experiment.py  test_merge_ground_truth.py  trace_collector.py  trace_to_candidates.py
recon-lab/repos/: README.md
recon-lab/repos/cutoff/: cpp-abseil.md  cpp-cli11.md  cpp-nlohmann-json.md  cpp-simdjson.md  cpp-spdlog.md  csharp-dapper.md  csharp-fluentvalidation.md  go-cobra.md  java-assertj.md  java-guava.md  java-jackson.md  java-kafka.md  java-retrofit.md  php-carbon.md  php-flysystem.md  php-monolog.md  php-phpunit.md  python-click.md  python-flask.md  python-jinja.md  python-markupsafe.md  python-marshmallow.md  python-requests.md  python-rich.md  python-typer.md  ruby-devise.md  ruby-faraday.md  ruby-puma.md  ruby-sidekiq.md  rust-clap.md  rust-hyper.md  rust-reqwest.md  swift-kingfisher.md  swift-lottie.md  swift-snapkit.md  typescript-commander.md  typescript-date-fns.md  typescript-execa.md  typescript-fastify.md  typescript-trpc.md
recon-lab/repos/eval/: cpp-catch2.md  cpp-grpc.md  csharp-automapper.md  csharp-xunit.md  java-lombok.md  php-console.md  php-whoops.md  python-pydantic.md  ruby-grape.md  ruby-sinatra.md  rust-diesel.md  swift-composable-architecture.md  typescript-esbuild.md
recon-lab/repos/ranker-gate/: cpp-fmt.md  cpp-googletest.md  cpp-opencv.md  csharp-efcore.md  csharp-humanizer.md  go-bubbletea.md  go-caddy.md  go-gitea.md  java-gson.md  java-okhttp.md  java-spring-boot.md  php-guzzle.md  php-laravel.md  python-django.md  python-fastapi.md  python-httpx.md  ruby-jekyll.md  ruby-rack.md  ruby-rails.md  rust-serde.md  rust-tokio.md  swift-alamofire.md  swift-package-manager.md  swift-vapor.md  typescript-mermaid.md  typescript-nestjs.md  typescript-zod.md
recon-lab/roles/: analyst.md  auditor.md  executor.md  non_ok_author.md  prompts.md  reviewer.md  setup.md
recon-lab/scripts/: backfill_splade.py  batch_index_worktrees.py  mem_profile.py  overnight_reindex_all.py  pipeline_recall_gap.py  pipeline_recall_gap_results.txt  ppr_fresh_experiment.py  ppr_micro_experiment.py  purge_generated_from_indexes.py  recall_gap_fast.py  regen_queries_71.py  reimport_71.py  submit_reindex_gpu.sh
recon-lab/src/cpl_lab/: __init__.py  build_scaffold_rerank_data.py  cli.py  clone.py  collect.py  collect_signals.py  collector.py  config.py  data_manifest.py  eval_recon_pipeline.py  evaluate.py  generate.py  github_models.py  index.py  llm_filter.py  merge.py  merge_ground_truth.py  merge_signals.py  mine.py  patch_ground_truth.py  pr_checkout.py  pr_import.py  pr_index.py  pr_select.py  pr_to_ground_truth.py  schema.py  status.py  swebench.py  swebench_common.py  swebench_import.py  swebench_llm.py  swebench_resolve.py  train.py  train_all.py  train_cutoff.py  train_gate.py  train_ranker.py  validate.py  validate_ground_truth.py
recon-lab/src/cpl_lab/collect/: collect.py  collect_signals.py  merge_ground_truth.py  merge_signals.py
recon-lab/src/cpl_lab/eval/: __init__.py  run.py  tasks.py
recon-lab/src/cpl_lab/eval/datasets/: __init__.py  eval_gt.py  scaffold_rank.py
recon-lab/src/cpl_lab/eval/experiments/: eval_pipeline.yaml
recon-lab/src/cpl_lab/eval/metrics/: __init__.py  gate.py  ranking.py
recon-lab/src/cpl_lab/eval/models/: __init__.py  llm_reranker.py  offline_ranking.py  ranking.py
recon-lab/src/cpl_lab/experiments/: build_scaffold_rerank_data.py  probe_qwen.py  probe_qwen_rich.py
recon-lab/src/cpl_lab/experiments/cross_encoder_rerank/: README.md  export_onnx.py  run.py
recon-lab/src/cpl_lab/experiments/splade_bakeoff/: run.py  (+2 more)
recon-lab/src/cpl_lab/llm/: llm_client.py  llm_queries.py
recon-lab/src/cpl_lab/pipeline/: clone.py  index.py  non_ok_queries.py  patch_ground_truth.py  pr_checkout.py  pr_import.py  pr_index.py  pr_select.py
recon-lab/src/cpl_lab/training/: train_all.py  validate_ground_truth.py
recon-lab/src/recon_lab/: cli.py  config.py  data_manifest.py  status.py
recon-lab/src/recon_lab/collect/: collect.py  collect_signals.py  merge_ground_truth.py  merge_signals.py
recon-lab/src/recon_lab/eval/: __init__.py  run.py  tasks.py
recon-lab/src/recon_lab/llm/: _json_parse.py  llm_client.py  llm_queries.py
recon-lab/src/recon_lab/pipeline/: clone.py  index.py  index_shard.py  non_ok_queries.py  patch_ground_truth.py  pr_checkout.py  pr_import.py  pr_index.py  pr_select.py
recon-lab/src/recon_lab/training/: train_all.py  validate_ground_truth.py
recon-lab/tests/: test_audit_fixes.py  test_ground_truth_pipeline.py
(+1379 files in other folders)
