[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "coderecon"
dynamic = ["version"]
description = "Local repository recon tool for AI coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # CLI
    "click>=8.3.0",
    # HTTP Server
    "starlette>=0.52.0",
    "uvicorn>=0.40.0",
    "httpx>=0.28.0",
    # MCP
    "mcp>=1.9.0",
    "fastmcp>=3.0.0,<4",
    # Config & Validation
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.0",
    "json5>=0.9.0",
    # Index
    "sqlmodel>=0.0.24",
    "alembic>=1.15.0",
    "tantivy>=0.25.0",
    # Embedding via OpenAI-compatible API (Azure or direct)
    "openai>=1.82.0",
    # Tree-sitter core runtime only - grammars installed dynamically per-repo
    "tree-sitter>=0.24.0",
    # Logging
    "structlog>=25.5.0",
    # CLI progress & output
    "rich>=14.0.0",
    "questionary>=2.0.0",
    # File watching
    "watchfiles>=1.0.0",
    # Ignore pattern matching (gitignore-spec compliant)
    "pathspec>=0.12.0",
    # Retry logic for network operations
    "tenacity>=8.2.0",
    # Graph algorithms (PageRank, SCC, Louvain)
    "networkx>=3.2",
    "scipy>=1.11.0",
    # Cross-platform memory queries (test execution budget)
    "psutil>=5.9.0",
    # SPLADE sparse retrieval (ONNX-based, no torch needed)
    # GPU build includes CUDA/ROCm and falls back to CPU transparently.
    # macOS gets CoreML via the base package.
    "onnxruntime-gpu>=1.20.0; sys_platform != 'darwin'",
    "onnxruntime>=1.20.0; sys_platform == 'darwin'",
    "tokenizers>=0.21.0",
    # Model weights (installed from GitHub release artifacts)
    "coderecon-models-splade>=1.0.0",
    "coderecon-models-ce>=1.0.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "sqlalchemy[mypy]>=2.0.46",
    "pre-commit>=4.2.0",
    "testcontainers>=4.10.0",
    # Tree-sitter grammars for tests (not runtime deps - installed on-demand)
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-json>=0.23.0",
    "tree-sitter-yaml>=0.6.0",
    "tree-sitter-toml>=0.6.0",
    "tree-sitter-markdown>=0.3.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    # Multilang import extraction support
    "tree-sitter-java>=0.23.0",
    "tree-sitter-kotlin>=1.0.0",
    "tree-sitter-scala>=0.23.0",
    "tree-sitter-ruby>=0.23.0",
    "tree-sitter-php>=0.23.0",
    "tree-sitter-swift>=0.0.1",
    "tree-sitter-elixir>=0.3.0",
    "tree-sitter-haskell>=0.23.0",
    "tree-sitter-ocaml>=0.23.0",
    "tree-sitter-lua>=0.2.0",
    "tree-sitter-julia>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
]

[project.scripts]
recon = "coderecon.cli.main:cli"

[project.urls]
Homepage = "https://github.com/dfinson/coderecon"
Repository = "https://github.com/dfinson/coderecon"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/coderecon"]

[tool.hatch.build.targets.wheel.force-include]
"src/coderecon/ranking/data" = "coderecon/ranking/data"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]
extend-exclude = []

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# MCP tool files use Field() in defaults (FastMCP convention) and have placeholder args
"src/coderecon/mcp/tools/*.py" = ["B008", "ARG001"]
# E2E test fixtures require parameters for pytest dependency injection even if unused
"tests/e2e/*.py" = ["ARG001"]
[tool.ruff.lint.isort]
known-first-party = ["coderecon"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "tantivy.*",
    "structlog.*",
    "tree_sitter.*",
    "tree_sitter_python.*",
    "tree_sitter_javascript.*",
    "tree_sitter_typescript.*",
    "tree_sitter_go.*",
    "tree_sitter_rust.*",
    "scip.*",
    "starlette.*",
    "uvicorn.*",
    "watchfiles.*",
    "httpx.*",
    "rich.*",
    "questionary.*",
    "tenacity.*",
    "opentelemetry.*",
    "json5.*",
    "hatchling.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
strict = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --ignore=tests/e2e"
timeout = 600
timeout_method = "signal"
markers = [
    "integration: marks tests requiring external resources (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: marks tests that must run serially (not in parallel)",
    "e2e: marks end-to-end tests that clone real repos and start the daemon",
]

[tool.coverage.run]
source = ["src/coderecon"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = [
    "B101",  # assert_used — asserts are used in tests and internal invariants
    "B314",  # xml_bad_parse — parses own coverage XML, not untrusted input
    "B404",  # import_subprocess — informational; subprocess is core to git/test tooling
    "B405",  # import_xml — coverage XML parsing from trusted local files
    "B603",  # subprocess_without_shell_equals_true — all calls use list args (safe)
    "B607",  # start_process_with_partial_path — git/npm/cargo invoked by name (standard)
    "B608",  # hardcoded_sql — SQLAlchemy text() interpolates model metadata, not user input
]

[tool.uv.sources]
evee-ms-core = { path = "assets/evee_wheels/evee_ms_core-0.4.0-py3-none-any.whl" }
coderecon-models-ce = { path = "model-packages/coderecon-models-ce" }
coderecon-models-splade = { path = "model-packages/coderecon-models-splade" }
coderecon-models-ce-tiny = { path = "model-packages/coderecon-models-ce-tiny" }

[dependency-groups]
dev = [
    "evee-ms-core",
]
