[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cpl-lab"
version = "0.1.0"
description = "Recon Lab — training pipeline for CodePlane's recon models (ranker, cutoff, gate)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "github-copilot-sdk>=0.1.32",
    "rich>=14.0",
    "tomli>=2.0; python_version < '3.12'",
]

[project.scripts]
cpl-lab = "cpl_lab.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cpl_lab"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
