[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recon-lab"
version = "0.1.0"
description = "Recon Lab — training pipeline for CodeRecon's recon models (ranker, cutoff, gate)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "datasets>=3.2",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "rich>=14.0",
    "tomli>=2.0; python_version < '3.12'",
    "coderecon",
    "evee-ms-core",
]

[project.scripts]
recon-lab = "cpl_lab.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cpl_lab"]

[tool.uv.sources]
coderecon = { path = "..", editable = true }
evee-ms-core = { path = "../assets/evee_wheels/evee_ms_core-0.4.0-py3-none-any.whl" }

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
