[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coderecon-models-ce-tiny"
version = "1.0.0"
description = "TinyBERT-L-2-v2 cross-encoder ONNX model for coderecon fast reranking"
license = "MIT"
requires-python = ">=3.12"

[tool.hatch.build.targets.wheel]
packages = ["coderecon_models_ce_tiny"]

[tool.hatch.build.targets.wheel.force-include]
"models/model.onnx" = "coderecon_models_ce_tiny/models/model.onnx"
"models/model.onnx.data" = "coderecon_models_ce_tiny/models/model.onnx.data"
"models/tokenizer.json" = "coderecon_models_ce_tiny/models/tokenizer.json"
